[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/PauseMenu.gd" type="Script" id=1]

[node name="PauseMenu" type="Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.709804 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -96.0
margin_top = -73.0
margin_right = 104.0
margin_bottom = 77.0
custom_constants/separation = 26
alignment = 1

[node name="ResumeButton" type="Button" parent="VBoxContainer"]
margin_top = 19.0
margin_right = 180.0
margin_bottom = 59.0
text = "Resume"

[node name="RestartButton" type="Button" parent="VBoxContainer"]
margin_top = 65.0
margin_right = 180.0
margin_bottom = 105.0
text = "Restart"

[node name="MainMenuButton" type="Button" parent="VBoxContainer"]
margin_top = 111.0
margin_right = 180.0
margin_bottom = 151.0
text = "Main Menu"

[connection signal="pressed" from="VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="VBoxContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
